GNOME Bugzilla – Bug 707208
menu does not appear translated
Last modified: 2013-09-03 16:02:24 UTC
The main application menu is not translated in empathy-3.9.90, despite the strings being correctly localized. All locales tested exhibited this behavior.
I ran git-bisect against the tree and discovered that https://git.gnome.org/browse/empathy/commit/?id=3d1021753d01d973c929c8758b11a147498377cc was the culprit commit. However, I'm not clear how this affected the menu, especially as not all strings are affected. (The status list, for example, is translated correctly.)
It appears that this is caused by lack of translation domain in the GtkBuilder files. I will submit a patch later today to correct this.
Created attachment 253946 [details] [review] Fix i18n I manually tested adding domain="empathy" to empathy-roster-window-menubar.ui. It corrected the menu strings. I have corrected the domain in all GtkBuilder files in src/ to solve similar problems there. I'm unsure why pulling TPAW out of tree caused this problem to appear, but this appears to be the root cause.
Created attachment 253984 [details] [review] builder: use the correct translation domain tpaw_builder_get_*() functions always used GETTEXT_PACKAGE as translation domain, but that always meant the tpaw one so it broke empathy's translations. This commit adds tpaw_builder_get_*_with_domain() functions and replace the previous functions with macros that use the GETTEXT_PACKAGE defined in the .c file that includes tpaw-builder.h.
Review of attachment 253984 [details] [review]: ++
Seán: thanks, your comments made me understand what went wrong. I think that a better approach would be the one I just attached, so we don't have to modify all the .ui files.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.