builder: use the correct translation domain

tpaw_builder_get_*() functions always used GETTEXT_PACKAGE as
translation domain, but that always meant the tpaw one so it broke
empathy's translations.

This commit adds tpaw_builder_get_*_with_domain() functions and replace
the previous functions with macros that use the GETTEXT_PACKAGE defined
in the .c file that includes tpaw-builder.h.

https://bugzilla.gnome.org/show_bug.cgi?id=707208